--- a/index.html
+++ b/index.html
@@ -321,10 +321,6 @@
                     <button id="toolbar-set-end" class="bg-blue-500 hover:bg-blue-600 text-white px-2 py-1 rounded text-xs transition">
                         Set End
                     </button>
-                    <div class="flex items-center space-x-2 text-xs text-gray-600">
-                        <span>Start: <span id="toolbar-start-time" class="font-mono">00:00</span></span>
-                        <span>End: <span id="toolbar-end-time" class="font-mono">00:00</span></span>
-                    </div>
                     <div class="w-px h-6 bg-gray-300 mx-1"></div>
                     <button id="toolbar-speed-50" class="bg-purple-500 hover:bg-purple-600 text-white px-2 py-1 rounded text-xs transition">
                         50%
@@ -490,8 +486,14 @@
                     <div class="xl:col-span-1 space-y-4">
                         <!-- Note Input Area -->
                         <div class="bg-white border border-gray-200 rounded-lg p-4">
-                            <h3 class="text-lg font-semibold mb-3 text-gray-800">Create a Clip</h3>
-                                <textarea id="note-text" class="w-full p-3 border border-gray-300 rounded-lg h-24 focus:ring-2 focus:ring-blue-500" placeholder="Write your note for this clip..."></textarea>
+                            <div class="flex items-center justify-between mb-3">
+                                <h3 class="text-lg font-semibold text-gray-800">Create a Clip</h3>
+                                <div class="flex items-center space-x-3 text-sm text-gray-600">
+                                    <span>Start: <span id="toolbar-start-time" class="font-mono">00:00</span></span>
+                                    <span>End: <span id="toolbar-end-time" class="font-mono">00:00</span></span>
+                                </div>
+                            </div>
+                            <textarea id="note-text" class="w-full p-3 border border-gray-300 rounded-lg h-24 focus:ring-2 focus:ring-blue-500" placeholder="Write your note for this clip..."></textarea>
                                 <button id="add-note" class="mt-3 w-full bg-green-500 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-600 transition shadow-md">
                                     Add Note & Clip
                                 </button>
