--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,7 @@
                             <button onclick="seekToTime(${note.startTime})" class="text-xs bg-blue-100 text-blue-700 py-1 px-2 rounded hover:bg-blue-200 transition">
                                 Go to Start
                             </button>
-                            <button onclick="playClip(${note.startTime}, ${note.endTime})" class="text-xs bg-green-100 text-green-700 py-1 px-2 rounded hover:bg-green-200 transition">
+                            <button onclick="playClip(${note.startTime}, ${note.endTime}, '${note.id}')" class="text-xs bg-green-100 text-green-700 py-1 px-2 rounded hover:bg-green-200 transition">
                                 Play Clip
                             </button>
                             <button onclick="editNote('${note.id}')" class="text-xs bg-yellow-100 text-yellow-700 py-1 px-2 rounded hover:bg-yellow-200 transition">
