Increase note scrolling height for better user experience - change from max-h-80/96 to max-h-[600px]

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                             <h3 class="text-sm font-semibold text-gray-800">All My Notes</h3>
                             <button id="refresh-all-notes" class="text-blue-600 hover:text-blue-800 text-xs">Refresh</button>
                         </div>
-                        <div id="all-notes-sidebar" class="space-y-3 max-h-80 overflow-y-auto">
+                        <div id="all-notes-sidebar" class="space-y-3 max-h-[600px] overflow-y-auto">
                             <p class="text-gray-500 text-center py-6 text-sm">Loading notes...</p>
                         </div>
                     </div>
@@ -502,7 +502,7 @@
                         <!-- Current Video Notes -->
                             <div class="bg-white border border-gray-200 rounded-lg p-4 h-fit">
                                 <h3 class="text-lg font-semibold mb-3 text-gray-800">Current Video Notes</h3>
-                                <div id="current-video-notes" class="space-y-3 max-h-96 overflow-y-auto">
+                                <div id="current-video-notes" class="space-y-3 max-h-[600px] overflow-y-auto">
                                     <p class="text-gray-500 text-center py-8">No video loaded</p>
                                 </div>
                             </div>
