--- a/index.html
+++ b/index.html
@@ -501,20 +501,7 @@
 
                         <!-- Current Video Notes -->
                             <div class="bg-white border border-gray-200 rounded-lg p-4 h-fit">
-                                <div class="flex justify-between items-center mb-3">
-                                    <h3 class="text-lg font-semibold text-gray-800">Current Video Notes</h3>
-                                    <div class="flex space-x-2">
-                                        <button onclick="debugRefreshNotes()" class="text-xs bg-gray-500 text-white px-2 py-1 rounded hover:bg-gray-600 transition" title="Debug: Refresh notes display">
-                                            🔄 Debug
-                                        </button>
-                                        <button onclick="debugNotesState()" class="text-xs bg-blue-500 text-white px-2 py-1 rounded hover:bg-blue-600 transition" title="Debug: Check notes state">
-                                            📊 State
-                                        </button>
-                                        <button onclick="debugNoteEditing()" class="text-xs bg-green-500 text-white px-2 py-1 rounded hover:bg-green-600 transition" title="Debug: Test note editing">
-                                            ✏️ Edit
-                                        </button>
-                                    </div>
-                                </div>
+                                <h3 class="text-lg font-semibold mb-3 text-gray-800">Current Video Notes</h3>
                                 <div id="current-video-notes" class="space-y-3 max-h-[600px] overflow-y-auto">
                                     <p class="text-gray-500 text-center py-8">No video loaded</p>
                                 </div>
