🔄 LOGOUT: Add page refresh for complete state reset
- Modified handleLogout() to refresh page after logout
- Shows toast message about refreshing page
- 1.5 second delay before refresh to allow user to see the message
- Ensures complete return to original page state
- Fixes issue where page reset was incomplete

--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,12 @@
             // Hide auth modal and show login button
             hideAuthModal();
             
-            showToast('Logged out successfully. Page reset to initial state.', 'info');
+            showToast('Logged out successfully. Refreshing page to ensure clean state...', 'info');
+            
+            // Refresh the page after a short delay to ensure complete reset
+            setTimeout(() => {
+                window.location.reload();
+            }, 1500);
         }
 
         // Core utility functions
