🧹 CLEANUP: Remove all MongoDB dependencies and files
- Deleted server.js (MongoDB version) and server-cloud.js (PostgreSQL version)
- Updated package.json: main entry point now points to server-supabase.js
- Removed unused scripts: local, cloud, dev-local, dev-cloud
- Removed dependencies: mongoose, pg, express-validator
- Updated env.example and env.production to use Supabase credentials
- Updated setup.sh to reflect Supabase setup instead of MongoDB
- Updated health check message to remove MongoDB references
- Cleaned up package-lock.json and node_modules
- Project now exclusively uses Supabase (PostgreSQL) backend

--- a/index.html
+++ b/index.html
@@ -2956,7 +2956,7 @@
                     let message = `Database: ${healthData.status}\n`;
                     message += `Total notes: ${analysis.totalNotes}\n`;
                     message += `With ID: ${analysis.notesWithId}\n`;
-                    message += `With MongoDB ID: ${analysis.notesWithMongoId}\n`;
+                    message += `With database ID: ${analysis.notesWithMongoId}\n`;
                     message += `With both: ${analysis.notesWithBoth}\n`;
                     message += `With neither: ${analysis.notesWithNeither}`;
                     
