📅 ENHANCEMENT: Add detailed date formatting with day and hour
- Added formatDetailedDate() function for enhanced date display
- Date format now shows: Day (Mon-Sun) + MM/DD/YYYY + HH:MM
- Example: 'Mon 08/22/2025 15:30' instead of just '8/22/2025'
- Applied to note preview view creation timestamps
- Better user experience for tracking when notes were created
- Consistent formatting across all note displays

--- a/index.html
+++ b/index.html
@@ -3025,6 +3025,19 @@
             return `${minutes}:${seconds}`;
         }
 
+        function formatDetailedDate(dateString) {
+            const date = new Date(dateString);
+            const days = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+            const day = days[date.getDay()];
+            const month = (date.getMonth() + 1).toString().padStart(2, '0');
+            const dayOfMonth = date.getDate().toString().padStart(2, '0');
+            const year = date.getFullYear();
+            const hours = date.getHours().toString().padStart(2, '0');
+            const minutes = date.getMinutes().toString().padStart(2, '0');
+            
+            return `${day} ${month}/${dayOfMonth}/${year} ${hours}:${minutes}`;
+        }
+
         function showToast(message, type = 'info') {
             if (!toast) return;
             
@@ -3268,7 +3281,7 @@
                                             <span class="mx-2">•</span>
                                             <span class="text-blue-600">${escapeHTML(note.videoTitle || note.videoId)}</span>
                                             <span class="mx-2">•</span>
-                                            <span class="text-xs text-gray-500">Created: ${new Date(note.createdAt || note.created_at).toLocaleDateString()}</span>
+                                            <span class="text-xs text-gray-500">Created: ${formatDetailedDate(note.createdAt || note.created_at)}</span>
                                         </div>
                                     </div>
                                                             <div class="flex items-center space-x-2">
