--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
          
          #all-notes-preview.grid-cols-1 > div {
              flex: 1 1 100%;
+             width: 100%;
          }
          
          /* Ensure note details expand properly */
