--- a/index.html
+++ b/index.html
@@ -404,6 +404,11 @@
              grid-column: span 2 / span 2;
          }
          
+         /* Hide top video controls toolbar when left controls are visible */
+         .sidebar-collapsed #video-controls-toolbar {
+             display: none !important;
+         }
+         
          /* Mobile responsive adjustments */
          @media (max-width: 1280px) {
              #left-video-controls {
@@ -619,37 +624,37 @@
                     <div id="video-note-view" class="grid grid-cols-1 xl:grid-cols-5 gap-4 lg:gap-6">
                     <!-- Left Video Controls Column (hidden by default, shown when sidebar collapsed) -->
                     <div id="left-video-controls" class="xl:col-span-1 hidden">
-                        <div class="bg-gray-100 border border-gray-200 rounded-lg p-4 space-y-3">
-                            <h4 class="text-sm font-semibold text-gray-700 text-center mb-3">Video Controls</h4>
-                            <button id="left-toolbar-play-pause" class="w-full bg-green-500 hover:bg-green-600 text-white px-3 py-2 rounded text-sm transition">
-                                ▶ Play
+                        <div class="bg-gray-100 border border-gray-200 rounded-lg p-3 space-y-2">
+                            <h4 class="text-xs font-semibold text-gray-700 text-center mb-2">Controls</h4>
+                            <button id="left-toolbar-play-pause" class="w-full bg-green-500 hover:bg-green-600 text-white px-2 py-1.5 rounded text-xs transition">
+                                Play
                             </button>
-                            <div class="flex space-x-2">
-                                <button id="left-toolbar-frame-back" class="flex-1 bg-gray-500 hover:bg-gray-600 text-white px-2 py-2 rounded text-sm transition">
-                                    -1 Frame
+                            <div class="flex space-x-1">
+                                <button id="left-toolbar-frame-back" class="flex-1 bg-gray-500 hover:bg-gray-600 text-white px-1 py-1.5 rounded text-xs transition">
+                                    -1
                                 </button>
-                                <button id="left-toolbar-frame-forward" class="flex-1 bg-gray-500 hover:bg-gray-600 text-white px-2 py-2 rounded text-sm transition">
-                                    +1 Frame
-                                </button>
-                            </div>
-                            <div class="space-y-2">
-                                <button id="left-toolbar-set-start" class="w-full bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded text-sm transition">
-                                    Set Start
-                                </button>
-                                <button id="left-toolbar-set-end" class="w-full bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded text-sm transition">
-                                    Set End
+                                <button id="left-toolbar-frame-forward" class="flex-1 bg-gray-500 hover:bg-gray-600 text-white px-1 py-1.5 rounded text-xs transition">
+                                    +1
                                 </button>
                             </div>
-                            <div class="space-y-2">
-                                <button id="left-toolbar-speed-50" class="w-full bg-purple-500 hover:bg-purple-600 text-white px-3 py-2 rounded text-sm transition">
-                                    50% Speed
+                            <div class="space-y-1">
+                                <button id="left-toolbar-set-start" class="w-full bg-blue-500 hover:bg-blue-600 text-white px-2 py-1.5 rounded text-xs transition">
+                                    Start
                                 </button>
-                                <button id="left-toolbar-speed-150" class="w-full bg-purple-500 hover:bg-purple-600 text-white px-3 py-2 rounded text-sm transition">
-                                    150% Speed
+                                <button id="left-toolbar-set-end" class="w-full bg-blue-500 hover:bg-blue-600 text-white px-2 py-1.5 rounded text-xs transition">
+                                    End
                                 </button>
                             </div>
-                            <button id="left-toolbar-stop-looping" class="w-full hidden bg-red-500 hover:bg-red-600 text-white px-3 py-2 rounded text-sm transition">
-                                Stop Loop
+                            <div class="space-y-1">
+                                <button id="left-toolbar-speed-50" class="w-full bg-purple-500 hover:bg-purple-600 text-white px-2 py-1.5 rounded text-xs transition">
+                                    50%
+                                </button>
+                                <button id="left-toolbar-speed-150" class="w-full bg-purple-500 hover:bg-purple-600 text-white px-2 py-1.5 rounded text-xs transition">
+                                    150%
+                                </button>
+                            </div>
+                            <button id="left-toolbar-stop-looping" class="w-full hidden bg-red-500 hover:bg-red-600 text-white px-2 py-1.5 rounded text-xs transition">
+                                Stop
                             </button>
                         </div>
                     </div>
